k8s_optimizations/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-service
    infra-env: prod
    infra-service: test-service
    k8slens-edit-resource-version: v1
  name: test-service
  namespace: test-namespace
spec:
  progressDeadlineSeconds: 600
  replicas: 6
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: test-service
      infra-env: prod
      infra-service: test-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        vault.hashicorp.com/agent-cache-enable: "true"
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/agent-inject-secret-secrets.txt: private/data/prod/test-service
        vault.hashicorp.com/agent-pre-populate-only: "true"
        vault.hashicorp.com/role: prod-test-service
      labels:
        app: test-service
        infra-env: prod
        infra-service: test-service
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: capacity-type
                operator: In
                values:
                - spot
            - matchExpressions:
              - key: capacity-type
                operator: In
                values:
                - on-demand
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: test-service
                infra-env: prod
                infra-service: test-service
            topologyKey: kubernetes.io/hostname
      containers:
      - env:
        - name: DEPLOYMENT_ENV
          value: prod
        - name: AWS_STS_REGIONAL_ENDPOINTS
          value: regional
        image: 694468745478.dkr.ecr.ap-south-1.amazonaws.com/test-service:20231017103048
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - sleep 60
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /test-service/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 5
        name: test-service
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /inventory/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1200m
            memory: 1500Mi
          requests:
            cpu: 700m
            memory: 850Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        infra-node-group: compute-spot-arm-node
      priorityClassName: high-priority
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: test-service
      serviceAccountName: test-service
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app: test-service
            infra-env: prod
            infra-service: test-service
        maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
