k8s_optimizations/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-service
    infra-env: prod
    infra-service: test-service
  name: test-service
  namespace: test-namespace
spec:
  ports:
  - name: test-service
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-service
    infra-env: prod
    infra-service: test-service
  type: ClusterIP
